cg/harness/base/harness/harness-gateway-4.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: harness-gateway
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    kubernetes.io/ingress.class: 'harness'
    kots.io/placeholder: 'true'
    
spec:
  rules:
    - http:
        paths:
          - backend:
              serviceName: harness-gateway
              servicePort: 80
            path: /gateway(/|$)(.*)  
#
